# ai-research-agent

./: .env.example  .gitignore  .vercelignore  AGENTS.md  README.md  package.json  pnpm-lock.yaml  vercel.json
apps/web/: next.config.ts  package.json
apps/web/src/app/: globals.css  layout.tsx  manifest.ts  page.tsx
apps/web/src/app/api/admin/check/: route.ts
apps/web/src/app/api/evals/: route.ts
apps/web/src/app/api/evals/run/: route.ts
apps/web/src/app/api/memory/: route.ts
apps/web/src/app/api/memory/[...key]/: route.ts
apps/web/src/app/api/memory/bootstrap/: route.ts
apps/web/src/app/api/research/: route.ts
apps/web/src/app/api/research/[runId]/: route.ts
apps/web/src/app/api/research/[runId]/action/: route.ts
apps/web/src/app/api/updates/: route.ts
apps/web/src/app/api/updates/[updateId]/action/: route.ts
apps/web/src/app/updates/: page.tsx
apps/web/src/components/: research-workspace.tsx  status-pill.tsx  theme-toggle.tsx  updates-workspace.tsx
apps/web/src/lib/: backend.ts
docs/: architecture.md  deployment.md  research-agent-prompt.md
infra/: spaces-prefixes.md
infra/database/: schema.sql
infra/digitalocean/: app.yaml
services/worker/: pyproject.toml  requirements.txt
services/worker/src/ai_research_agent/: __init__.py  agent.py  config.py  formatting.py  main.py  memory.py  notion.py  progress.py  schemas.py  source_strategy.py  sources.py  spaces.py  storage.py  updates.py  worker.py  youtube.py
services/worker/tests/: test_formatting.py  test_intake.py  test_strategy_updates.py
