[project]
name = "ai-research-agent-worker"
version = "0.1.0"
description = "DigitalOcean-hosted worker for the AI Research Agent."
requires-python = ">=3.12"
dependencies = [
  "boto3>=1.35.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "openai-agents>=0.5.0",
  "psycopg[binary]>=3.2.0",
  "pydantic>=2.8.0",
  "python-dotenv>=1.0.1",
  "uvicorn[standard]>=0.30.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
